# state_machine

./: CMakeLists.txt  README.md  package.xml
include/state_machine/: basic_struct.h  blackboard.h  event.h  exception.h  return_code.h  sm.h  state.h  time.h  util.h
include/state_machine/event/: dummy_events.h
include/state_machine/state/: dummy_states.h
src/: event.cpp  main.cpp  sm.cpp  state.cpp
src/event/: dummy_events.cpp
src/state/: dummy_states.cpp
test/: test_sm.cpp  test_state_machine.cpp
