<?xml version="1.0"?>
<package format="2">
  <name>state_machine</name>
  <version>0.1.0</version>
  <description>A tiny state machine implementation</description>
  <maintainer email="yimeng@westwell-lab.com">Yimeng Hou</maintainer>
  <author email="yimeng@westwell-lab.com">Yimeng Hou</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>ws_client_comm</depend>

  <test_depend>rostest</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend>rosunit</test_depend>

</package>
